# geotherm

./: .gitignore  .gitmodules  CMakeLists.txt  EmpgTherm.jl  Makefile  PT data for geotherm calculations (1).xlsx  README.md  cmake_install.cmake  computegterm.jl  computegtherm.m  embedding.cpp  embedding.h  empgtherm.jl  empgtherms.m  fileLoaders.jl  geothermmainwindow.cpp  geothermmainwindow.h  geothermmainwindow.ui  loadlibs.jl  main.cpp  notebook_template.jl  plutonb.jl  report.html  requirements.sh  requirements.txt  storage.jl
Geotherm/: .gitignore  CMakeLists.txt  Geotherm  aboutdialog.ui  embedding.cpp  embedding.h  geothermmainwindow.cpp  geothermmainwindow.h  geothermmainwindow.ui  main.cpp
Geotherm/Geotherm_autogen/: mocs_compilation.cpp
Geotherm/Geotherm_autogen/EWIEGA46WW/: moc_aboutdialog.cpp.d  moc_geothermmainwindow.cpp.d
data/: .RData  .Rhistory  PT_ADP-Кратер-Гриб.csv  PT_ADP-Ломоносовская.csv  PT_ADP-ЦНИГРИ.csv  PT_ADP.csv  PT_ADP.xlsx  PTdata-1.xlsx  PTdata-2.xlsx  PTdata.csv
doc/: report2023.docx  report2025.md
matter/: computegtherm.m  empgtherms.m
mdb/: package-lock.json  package.json
mdb/src/: index.css
v1.11/: Manifest.toml  Project.toml
